# U2FAndroid

./: .gitignore  .gitmodules  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/michaelkuc6/u2fandroid/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/michaelkuc6/u2fsafe/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/U2FAndroid/: Storage.cpp  Storage.hpp  U2FAndroid.cpp  U2FAndroid_Read.cpp  U2FAndroid_Socket.cpp  U2FAndroid_Write.cpp  U2FDevice.cpp
app/src/main/java/com/michaelkuc6/u2fandroid/: LoginActivity.java  MainActivity.java  U2FActivity.java
app/src/main/java/com/michaelkuc6/u2fandroid/crypto/: BioKeyGenerator.java  GenericAuthenticationCallback.java  GenericCryptoObjectGenerator.java  GenericKeyGenerator.java  KeyGenerator.java  PassKeyGenerator.java
app/src/main/java/com/michaelkuc6/u2fandroid/jni/: Storage.java  U2FDevice.java
app/src/main/java/com/michaelkuc6/u2fandroid/ui/: FingerprintLoginFragment.java  LockFingerprintLoginFragment.java  LoginPrompt.java  PasswordGetFPFragment.java  PasswordSetFPFragment.java  TextLoginFragment.java  UnlockFingerprintLoginFragment.java
app/src/main/java/com/michaelkuc6/u2fsafe/: LoginActivity.java  MainActivity.java  U2FActivity.java
app/src/main/java/com/michaelkuc6/u2fsafe/crypto/: BioKeyGenerator.java  GenericAuthenticationCallback.java  GenericCryptoObjectGenerator.java  GenericKeyGenerator.java  KeyGenerator.java  PassKeyGenerator.java
app/src/main/java/com/michaelkuc6/u2fsafe/jni/: Storage.java  U2FDevice.java
app/src/main/java/com/michaelkuc6/u2fsafe/ui/: FingerprintLoginFragment.java  LockFingerprintLoginFragment.java  LoginPrompt.java  PasswordGetFPFragment.java  PasswordSetFPFragment.java  TextLoginFragment.java  UnlockFingerprintLoginFragment.java
app/src/main/java/com/michaelkuc6/u2fsafe/utils/: PrivateKeys.java
app/src/main/res/layout/: activity_main.xml  fragment_login.xml  fragment_u2f.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/michaelkuc6/u2fandroid/: ExampleUnitTest.java
app/src/test/java/com/michaelkuc6/u2fsafe/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
